[tool.pdm]

[project]
name = "dugway"
version = "0.1.0"
description = "Dugway testing framework"
authors = [
    {name = "Jacob Brunson", email = "github@jacobbrunson.com"},
]
dependencies = [
    "httpx>=0.25.0",
    "jacobs-json-schema>=0.4.2",
    "jacobs-json-doc>=0.15.0",
    "stevedore>=5.1.0",
    "paho-mqtt>=1.6.1",
    "jinja2>=3.1.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Apache License 2.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.entry-points.dugwayservice]
http = 'dugway.web:HttpService'
mqtt = 'dugway.mqtt:MqttService'

[project.entry-points.dugwayteststep]
http_request = 'dugway.web:HttpRequest'
mqtt_publish = 'dugway.mqtt:MqttPublish'
