[project]
name = "dugway"
version = "0.1.0"
description = "Dugway testing framework"
authors = [
    {name = "Jacob Brunson", email = "github@jacobbrunson.com"},
]
dependencies = [
    "httpx>=0.25.0",
    "jacobs-json-schema>=0.4.2",
    "jacobs-json-doc>=0.15.0",
    "stevedore>=5.1.0",
    "paho-mqtt>=1.6.1",
    "jinja2>=3.1.2",
    "pytest>=8.2.0",
    "typer>=0.12.3",
    "pluggy>=1.3.0",
    "rich>=13.9.4",
    "junit-xml>=1.9",
    "protobuf-inspector>=0.2",
    "python-jsonpath>=1.2.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Apache License 2.0"}

[project.scripts]
dugway = "dugway.cli:entrypoint"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.entry-points.dugwayservice]
http = 'dugway.web:HttpService'
mqtt = 'dugway.mqtt:MqttService'

[project.entry-points.dugwayteststep]
http_request = 'dugway.web:HttpRequest'
mqtt_publish = 'dugway.mqtt:MqttPublish'
mqtt_subscribe = 'dugway.mqtt:MqttSubscribe'
mqtt_message = 'dugway.mqtt:MqttMessage'

[project.entry-points.pytest11]
dugway = 'dugway.pytest_plugin'

[project.urls]
Repository = "https://github.com/pearmaster/dugway"
